# fastapi-project-insstagram

./: .env  .gitignore  README.md  check_db.py  list_tables.py  main.py  pyproject.toml  requirements.txt  signature.txt  test.db
app/: app.py  db.py  frontend.py  images.py  schema.py  users.py
